--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>hello</title>
+    <link href="web.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 	<h1>hello. index in main branch</h1>
